[package]
name = "mnllib"
version = "0.1.0"
edition = "2021"
description = "Rust library for the Mario & Luigi games"
repository = "https://github.com/MnL-Modding/mnllib.rs"
license = "MPL-2.0"
keywords = ["mnl"]
exclude = ["/tests/data"]

[dependencies]
bitfield-struct = "0.10.0"
byteorder = "1.5.0"
derive_more = { version = "1.0.0", features = ["from", "into", "deref", "deref_mut"] }
endian-num = { version = "0.2.0", features = ["linux-types"] }
grid = "0.16.0"
itertools = "0.14.0"
num_enum = "0.7.3"
rgb = "0.8.50"
thiserror = "2.0.11"

[dev-dependencies]
rstest = { version = "0.24.0", default-features = false }
